--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              
               "src/styles.css",
               "src/assets/css/aos.css",
               "src/assets/css/bootstrap.min.css",
@@ -51,9 +52,8 @@
               "src/assets/js/form-validator.min.js",
               "src/assets/js/jquery.magnific-popup.js",
               "src/assets/js/jquery.meanmenu.js",
-              "src/assets/js/jquery.min.js",
               "src/assets/js/odometer.min.js",
-              "src/assets/js/owl.carousel.min.js",
+              "src/assets/js/owl.carousel.min.js"
             ]
           },
           "configurations": {
