--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
               "src/assets",
               "src/fonts"
             ],
-            "styles": [ 
+            "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "src/assets/css/animate.min.css",
               "src/assets/css/all.min.css",
@@ -42,7 +43,7 @@
               "src/assets/css/index-style.web.css",
               "src/assets/css/jquery.dataTables.min.css",
               "src/assets/css/magnific-popup.web.css",
-           "src/assets/fonts/flaticon.css",
+              "src/assets/fonts/flaticon.css",
               "src/assets/css/main.css",
               "src/assets/css/meanmenu.web.css",
               "src/assets/css/normalize.css",
@@ -55,7 +56,7 @@
               "src/assets/css/responsive.web.css",
               "src/assets/css/select2.min.css",
               "src/assets/css/style.css"
-           ],
+            ],
            "scripts": [  
             "src/assets/js/aos.web.js",
             "src/assets/js/ajaxchimp.min.web.js",
@@ -146,6 +147,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
