--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.12",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -32,6 +34,7 @@
     "moment": "^2.29.4",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
     "select2": "^4.1.0-rc.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
